unpackaged/main/default/objects/AccountTeamMember/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Team</relationshipLabel>
    <relationshipName>Account_Team</relationshipName>
    <type>Lookup</type>
</CustomField>