unpackaged/main/default/objects/AccountTeamMember/fields/Account_Team_Member_ID_case_safe__c.field-meta.xml
<CustomField>
    <fullName>Account_Team_Member_ID_case_safe__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Team Member ID (case safe)</label>
    <type>Text</type>
</CustomField>