unpackaged/main/default/objects/AccountTeamMember/fields/Most_Recent_Event_At__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Event_At__c</fullName>
    <label>Most Recent Event At</label>
    <type>Date</type>
</CustomField>