unpackaged/main/default/objects/AccountTeamMember/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Team</relationshipName>
    <type>Lookup</type>
</CustomField>